fix image align issue in krabi

--- a/content/themes/krabi/assets/sass/components/_content.scss
+++ b/content/themes/krabi/assets/sass/components/_content.scss
@@ -3,9 +3,9 @@
 \*------------------------------------*/
 
 .c-content {
-  display: flex;
+  // display: flex;
   align-items: center;
-  flex-direction: column;
+  // flex-direction: column;
   word-break: break-word;
 
   > * {
